[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://characters/heroes/megaman/sprites/portrait.png" type="Texture" id=2]
[ext_resource path="res://GameOverScene.gd" type="Script" id=3]
[ext_resource path="res://scenes/NewGame.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="GameOverScene" type="Node2D"]
script = ExtResource( 3 )

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 82.0
margin_top = 55.0
margin_right = 599.0
margin_bottom = 163.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "High Score"

[node name="PlayerScoreLabel" type="Label" parent="."]
margin_left = 82.0
margin_top = 168.0
margin_right = 596.0
margin_bottom = 276.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Your  Score"

[node name="VictoryPose" type="Sprite" parent="."]
position = Vector2( 1293, 370 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="NewGame" type="TouchScreenButton" parent="."]
position = Vector2( 69, 563 )
normal = ExtResource( 4 )
